# People-Counter

picturas-people-counter-tool-ms/: Dockerfile  pyproject.toml
picturas-people-counter-tool-ms/picturas_people_counter_tool_ms/: config.py  main.py  people_counter_request_message.py  people_counter_result_message.py  people_counter_tool.py
picturas-people-counter-tool-ms/usage_example/: docker-compose.yml
picturas-people-counter-tool-ms/usage_example/request_mocker/: main.py
