[tool.poetry]
name = "picturas-people-counter-tool-ms"
version = "0.1.0"
description = "PictuRAS microservice (tool) that detects and counts people in an input image, optionally generating an annotated output image."
authors = ["Afonso Costa <d13690@di.uminho.pt>", "Paulo Sousa <d7157@di.uminho.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pydantic = "^2.10.3"
opencv-python-headless = "^4.8.0.74"  # Para manipulação de imagens e detecção de pessoas

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
